@@ -10,6 +10,8 @@ v0.0.8 Sun, 11 Dec 2005 15:53:37 +0100
    + fixed some bugs in gfsm_automaton_rmepsilon()
    + fixed an epsilon-related bug in compose() and intersect()
    + added gfsmScanner.[ch], gfsmRegexCompiler.[ch]
+   + added gfsmTrie, (quasi-)deterministic input acceptor (i/o pairs)
+     - currently geared towards storing frequencies
 
 v0.0.7 Sun, 20 Nov 2005 14:39:33 +0100
    + added lookup(), paths(), path<->string conversion functions
